--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@tanstack/react-query": "^5.71.1",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.0"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
