--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
