--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.71.1",
+    "antd": "^5.24.6",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "formik": "^2.4.6",
