--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "formik": "^2.4.6",
+    "framer-motion": "^12.6.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
+    "motion": "^12.6.5",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.4",
     "react": "^18.3.1",
