--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^5.2.1",
     "@tanstack/react-query": "^5.71.1",
-    "antd": "^5.24.6",
+    "antd": "^5.24.7",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
-    "motion": "^12.6.5",
+    "motion": "^12.7.4",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.4",
     "react": "^18.3.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@iconify-icon/react": "^2.3.0",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
