--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.24.7",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.5",
     "jwt-decode": "^4.0.0",
